--- a/nginx-1.6.2/debian/rules
+++ b/nginx-1.6.2/debian/rules
@@ -80,7 +80,8 @@ full_configure_flags := \
 			--add-module=$(MODULESDIR)/nginx-dav-ext-module \
 			--add-module=$(MODULESDIR)/nginx-echo \
 			--add-module=$(MODULESDIR)/nginx-upstream-fair \
-			--add-module=$(MODULESDIR)/ngx_http_substitutions_filter_module
+			--add-module=$(MODULESDIR)/ngx_http_substitutions_filter_module \
+			--add-module=../../nginx-push-stream-module
 
 extras_configure_flags := \
 			$(common_configure_flags) \
